traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.murabba.net`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule

      middlewares:
        - name: dashboard-auth

      services:
        - name: api@internal
          kind: TraefikService

  tls:
    secretName: traefik-murabba-net-tls
